--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "vee-validate": "^2.2.3",
     "vue": "^2.6.10",
+    "vue-avatar": "^2.1.7",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
