--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3",
     "vuetify": "^1.5.5",
+    "vuetify-upload-button": "^2.0.0",
     "vuex": "^3.0.1",
     "web3": "^1.0.0-beta.54"
   },
