--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "vue-avatar": "^2.1.7",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.3",
+    "vuedarkmode": "^0.3.23",
     "vuetify": "^1.5.5",
     "vuetify-upload-button": "^2.0.0",
     "vuex": "^3.0.1",
