--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-avatar": "^2.1.7",
     "vue-axios": "^2.1.4",
+    "vue-cookies": "^1.5.13",
     "vue-router": "^3.0.3",
     "vuedarkmode": "^0.3.23",
     "vuetify": "^1.5.5",
